<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
           android:id="@+id/description"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
           android:contentDescription="@string/description_info"
           android:text="@string/description"
           app:layout_constraintStart_toStartOf="@+id/topRow"
           app:layout_constraintTop_toTopOf="parent" />

       <LinearLayout
           android:id="@+id/topRow"
           android:layout_width="0dp"
           android:layout_height="0dp"
           android:layout_marginStart="32dp"
           android:layout_marginLeft="32dp"
           android:layout_marginTop="32dp"
           android:layout_marginEnd="32dp"
           android:layout_marginRight="32dp"
           android:maxWidth="350dp"
           android:orientation="horizontal"
           app:layout_constraintBottom_toTopOf="@+id/topGrid"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.5"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/description">

           <ImageView
               android:id="@+id/redTopLeft"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/top_left"
               android:maxWidth="350dp"
               android:src="@drawable/red"
               android:visibility="invisible" />

           <ImageView
               android:id="@+id/ylwTopLeft"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/top_left"
               android:maxWidth="350dp"
               android:src="@drawable/yellow"
               android:visibility="gone" />

           <ImageView
               android:id="@+id/topLeftGrid"
               android:layout_width="2dp"
               android:layout_height="match_parent"
               android:contentDescription="@string/grid_lines"
               android:src="@android:color/black"
               app:layout_constraintBottom_toTopOf="@+id/btmRow"
               app:layout_constraintEnd_toEndOf="@+id/midRow"
               app:layout_constraintHorizontal_bias="0.0"
               app:layout_constraintStart_toStartOf="@+id/midRow"
               app:layout_constraintTop_toBottomOf="@+id/midRow" />

           <ImageView
               android:id="@+id/redTopCentre"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/top_centre"
               android:maxWidth="350dp"
               android:src="@drawable/red"
               android:visibility="invisible" />

           <ImageView
               android:id="@+id/ylwTopCentre"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/top_centre"
               android:maxWidth="350dp"
               android:src="@drawable/yellow"
               android:visibility="gone" />

           <ImageView
               android:id="@+id/topRightGrid"
               android:layout_width="2dp"
               android:layout_height="match_parent"
               android:contentDescription="@string/grid_lines"
               android:src="@android:color/black"
               app:layout_constraintBottom_toTopOf="@+id/midRow"
               app:layout_constraintEnd_toEndOf="@+id/topRow"
               app:layout_constraintHorizontal_bias="0.5"
               app:layout_constraintStart_toStartOf="@+id/topRow"
               app:layout_constraintTop_toBottomOf="@+id/topRow" />

           <ImageView
               android:id="@+id/redTopRight"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/top_right"
               android:maxWidth="350dp"
               android:src="@drawable/red"
               android:visibility="invisible" />

           <ImageView
               android:id="@+id/ylwTopRight"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/top_right"
               android:maxWidth="350dp"
               android:src="@drawable/yellow"
               android:visibility="gone" />

       </LinearLayout>

       <ImageView
           android:id="@+id/topGrid"
           android:layout_width="0dp"
           android:layout_height="2dp"
           android:contentDescription="@string/grid_lines"
           android:src="@android:color/black"
           app:layout_constraintBottom_toTopOf="@+id/midRow"
           app:layout_constraintEnd_toEndOf="@+id/topRow"
           app:layout_constraintHorizontal_bias="0.5"
           app:layout_constraintStart_toStartOf="@+id/topRow"
           app:layout_constraintTop_toBottomOf="@+id/topRow" />

       <LinearLayout
           android:id="@+id/midRow"
           android:layout_width="0dp"
           android:layout_height="0dp"
           android:layout_marginStart="32dp"
           android:layout_marginLeft="32dp"
           android:layout_marginEnd="32dp"
           android:layout_marginRight="32dp"
           android:orientation="horizontal"
           app:layout_constraintBottom_toTopOf="@+id/btmGrid"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/topGrid">

           <ImageView
               android:id="@+id/redMidLeft"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/mid_left"
               android:maxWidth="350dp"
               android:src="@drawable/red"
               android:visibility="invisible" />

           <ImageView
               android:id="@+id/ylwMidLeft"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/mid_left"
               android:maxWidth="350dp"
               android:src="@drawable/yellow"
               android:visibility="gone" />

           <ImageView
               android:id="@+id/midLeftGrid"
               android:layout_width="2dp"
               android:layout_height="match_parent"
               android:contentDescription="@string/grid_lines"
               android:src="@android:color/black"
               app:layout_constraintBottom_toTopOf="@+id/btmRow"
               app:layout_constraintEnd_toEndOf="@+id/midRow"
               app:layout_constraintHorizontal_bias="0.0"
               app:layout_constraintStart_toStartOf="@+id/midRow"
               app:layout_constraintTop_toBottomOf="@+id/midRow" />

           <ImageView
               android:id="@+id/redMidCentre"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/mid_centre"
               android:maxWidth="350dp"
               android:src="@drawable/red"
               android:visibility="invisible" />

           <ImageView
               android:id="@+id/ylwMidCentre"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/mid_centre"
               android:maxWidth="350dp"
               android:src="@drawable/yellow"
               android:visibility="gone" />

           <ImageView
               android:id="@+id/midRightGrid"
               android:layout_width="2dp"
               android:layout_height="match_parent"
               android:contentDescription="@string/grid_lines"
               android:src="@android:color/black"
               app:layout_constraintBottom_toTopOf="@+id/midRow"
               app:layout_constraintEnd_toEndOf="@+id/topRow"
               app:layout_constraintHorizontal_bias="0.5"
               app:layout_constraintStart_toStartOf="@+id/topRow"
               app:layout_constraintTop_toBottomOf="@+id/topRow" />

           <ImageView
               android:id="@+id/redMidRight"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/mid_right"
               android:maxWidth="350dp"
               android:src="@drawable/red"
               android:visibility="invisible" />

           <ImageView
               android:id="@+id/ylwMidRight"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/mid_right"
               android:maxWidth="350dp"
               android:src="@drawable/yellow"
               android:visibility="gone" />

       </LinearLayout>

       <ImageView
           android:id="@+id/btmGrid"
           android:layout_width="0dp"
           android:layout_height="2dp"
           android:contentDescription="@string/grid_lines"
           android:src="@android:color/black"
           app:layout_constraintBottom_toTopOf="@+id/btmRow"
           app:layout_constraintEnd_toEndOf="@+id/midRow"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="@+id/midRow"
           app:layout_constraintTop_toBottomOf="@+id/midRow" />

       <LinearLayout
           android:id="@+id/btmRow"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_marginStart="32dp"
           android:layout_marginLeft="32dp"
           android:layout_marginEnd="32dp"
           android:layout_marginRight="32dp"
           android:orientation="horizontal"
           app:layout_constraintBottom_toTopOf="@+id/currentStatus"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.5"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/btmGrid">

           <ImageView
               android:id="@+id/redBtmLeft"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/btm_left"
               android:maxWidth="350dp"
               android:src="@drawable/red"
               android:visibility="invisible" />

           <ImageView
               android:id="@+id/ylwBtmLeft"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/btm_left"
               android:maxWidth="350dp"
               android:src="@drawable/yellow"
               android:visibility="gone" />

           <ImageView
               android:id="@+id/btmLeftGrid"
               android:layout_width="2dp"
               android:layout_height="match_parent"
               android:contentDescription="@string/grid_lines"
               android:src="@android:color/black"
               app:layout_constraintBottom_toTopOf="@+id/btmRow"
               app:layout_constraintEnd_toEndOf="@+id/midRow"
               app:layout_constraintHorizontal_bias="0.0"
               app:layout_constraintStart_toStartOf="@+id/midRow"
               app:layout_constraintTop_toBottomOf="@+id/midRow" />

           <ImageView
               android:id="@+id/redBtmCentre"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/btm_centre"
               android:maxWidth="350dp"
               android:src="@drawable/red"
               android:visibility="invisible" />

           <ImageView
               android:id="@+id/ylwBtmCentre"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/btm_centre"
               android:maxWidth="350dp"
               android:src="@drawable/yellow"
               android:visibility="gone" />

           <ImageView
               android:id="@+id/btmRightGrid"
               android:layout_width="2dp"
               android:layout_height="match_parent"
               android:contentDescription="@string/grid_lines"
               android:src="@android:color/black"
               app:layout_constraintBottom_toTopOf="@+id/midRow"
               app:layout_constraintEnd_toEndOf="@+id/topRow"
               app:layout_constraintHorizontal_bias="0.5"
               app:layout_constraintStart_toStartOf="@+id/topRow"
               app:layout_constraintTop_toBottomOf="@+id/topRow" />

           <ImageView
               android:id="@+id/redBtmRight"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/btm_right"
               android:maxWidth="350dp"
               android:src="@drawable/red"
               android:visibility="invisible" />

           <ImageView
               android:id="@+id/ylwBtmRight"
               android:layout_width="80dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:contentDescription="@string/btm_right"
               android:maxWidth="350dp"
               android:src="@drawable/yellow"
               android:visibility="gone" />
       </LinearLayout>

       <TextView
           android:id="@+id/currentStatus"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="32dp"
           android:layout_marginBottom="52dp"
           android:contentDescription="@string/current_status_info"
           android:text="@string/current_status"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.5"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/btmRow" />

</android.support.constraint.ConstraintLayout>
